--- a/Stage 2/accueil/acceuil.html
+++ b/Stage 2/accueil/acceuil.html
@@ -35,32 +35,31 @@
 
     <link rel="stylesheet" href="acceuil.css">
 
+
 </head>
 <body>
    <!---------------------------------- Navbar ---------------------------------->
-   <nav class="navbar navbar-light" style="background-color: #E74513;">
-    <div class="navbar-brand" style="color: white;" href="#">CMFC FORMATION</div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" style="color: white;" href="#">Soutien aux équipes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" style="color: white;" href="#">Gestion des situations complexes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" style="color: white;" href="#">Soutien aux encadrants</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
+   
+    
+      <nav>
+        <input id="nav-toggle" type="checkbox">
+        <div class="logo">CMCF</div>
+        <ul class="links">
+        <li><a href="#about">Conseils & Formations</a></li>
+          <li><a href="#about">Recrutement</a></li>
+          <li><a href="#projects">Livre</a></li>
+        </ul>
+        <label for="nav-toggle" class="icon-burger">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </label>
+      </nav>
+     
 
      <!---------------------------------- corps de page ---------------------------------->
-    <div class="container-fluid">
+
+    <div class="container-fluid" style="background-color: grey">
       <div class="titre">
         <p><h3>CMFC FORMATION – CHRISTOPHE MIEUSEMENT FORMATION & CONSEIL</h3></p>
         <p><h4>Se former pour améliorer son positionnement professionnel</h4></p>
@@ -74,7 +73,7 @@
       <div class="titre_catalogue">
         <p><h2>CATALOGUE DE FORMATION 2022</h2></p>
       </div>
-      <div class="container-fluid">
+      <div class="container-fluid" style="background-image: url('background-3.webp');">
         <div class="titre_partie_catalogue">
           <p><h4>SOUTIEN AUX EQUIPES</h4></p>
         </div>
