--- a/acceuil.html
+++ b/acceuil.html
@@ -92,41 +92,6 @@
       <div class="vide">
       </div>
 
-      <div data-aos="fade-right" data-aos-duration="2000">
-        <div class="pres">
-          <a href="#">
-          <div class="titre">
-            <h3>GESTION DES SITUATIONS COMPLEXES</h3>
-          </div>
-          <p></p>
-            <p class="texte">Comme l’ensemble des intervenants médico-sociaux, les professionnels MJPM sont régulièrement confrontés à des situations dites complexes.</p>
-            <p class="texte">Crise psychiatrique, agressivité et violence, alcoolisme chronique, aggravation des troubles neurologiques, crise intrafamiliale... ce sont quelques exemples de situations pour lesquelles les mandataires judiciaires sont sollicités et pour lesquelles les solutions sont particulièrement difficiles à trouver.</p>
-            <p class="texte">Source de stress, la gestion de ces situations viennent bien souvent rendre difficiles les relations au sein des institutions et mettre à mal les relations partenariales.</p>
-            <p class="texte">Le travail de gestion de ces situations complexes n’en reste pas moins une des missions des professionnels du secteur tutélaire.<p>
-            <p class="texte">Ces différentes formations visent à mieux armer les mandataires judiciaires à la gestion de ces situations. <p>
-        </div>
-      </a>
-      </div>
-
-      <div class="vide">
-      </div>
-
-      <div data-aos="fade-right" data-aos-duration="2000">
-        <div class="pres">
-          <a href="#">
-          <div class="titre">
-            <h3> SOUTIEN AUX ENCADRANTS </h3>
-          </div>
-          <p></p>
-            <p class="texte">L’encadrement des personnels médico-sociaux et en particulier des personnels tutélaires a beaucoup évolué en lien avec de nouvelles exigences légales, techniques ou organisationnelles.</p>
-            <p class="texte">Savoir accompagner une équipe au changement, soutenir les personnels dans la gestion du stress ou dans la gestion des cas complexes ou encore aider une équipe à traverser une crise, les besoins spécifiques des encadrants sont à prendre en compte que ce soit sous forme de groupe de parole ou de formations.</p>
-        </div>
-      </a>
-      </div>
-
-      <div class="vide">
-      </div>
-
     <div class="fond_couleur">
 
       <div class="vide">
@@ -197,11 +162,69 @@
       <div class="vide">
       </div>
 
-      <div class="separateur">
+    <div class="fond_couleur">
+
+      <div class="vide">
+      </div>
+
+      <div class="separateur_couleur">
+      </div>
+
+      <div class="grand_titre_couleur">
+        <h1>ILS NOUS FONT CONFIANCE</h1>
       </div>
 
       <div class="vide">
       </div>
+
+      <div data-aos="fade-right" data-aos-duration="2000">
+        <div class="pres_couleur">
+          <a href="#">
+          <div class="titre_couleur">
+          </div>
+            <p class="texte_couleur">Udaf 77 – Udaf 51 – Udaf 32 – Udaf 29 – Udaf 31 – Udaf 60 - Atinord – ATPC - AT 92 – FNAT – ATMP 01 – ATVM – AT occitania – ATMP 14 - APAJH 95.</p>
+          </div>
+          </a>
+      </div>
+
+       <div class="vide">
+      </div>
+
+      <div class="separateur_couleur">
+      </div>
+
+      <div class="vide">
+      </div>
+
+    </div>
+    
+    <div class="vide">
+    </div>
+
+    <div class="grand_titre">
+        <h1>CMCF EST UN ORGANISME DE FORMATION CERTIFIÉ</h1>
+    </div>
+
+    <div class="vide">
+    </div>
+
+    <div class="cadre_photo">
+
+    <img src="datadock.jpg">
+    <img src="logo_qualiopi.png">
+
+    </div>
+
+    <div class="vide">
+    </div>
+
+    <div class="separateur">
+    </div>
+
+    <div class="vide">
+    </div>
+
+    </div>
 
   </div>
   
