--- a/acceuil.html
+++ b/acceuil.html
@@ -45,8 +45,8 @@
         <input id="nav-toggle" type="checkbox">
         <div class="logo">CMCF</div>
         <ul class="links">
-          <li><a href="#projects">Accueil</a></li>
-          <li><a href="#">Conseils & Formations</a>
+          <li><a href="acceuil.html">Accueil</a></li>
+          <li><a href="conseils_formations.html">Conseils & Formations</a>
           <li><a href="#about">Recrutement</a></li>
           <li><a href="#projects">Livre</a></li>
         </ul>
@@ -74,7 +74,7 @@
       <div class="vide">
       </div>
 
-      <div data-aos="fade-right" data-aos-duration="2000">
+      <div data-aos="fade-right" data-aos-duration="1000">
         <div class="pres">
           <a href="#">
           <div class="titre">
@@ -107,7 +107,7 @@
       <div class="vide">
       </div>
 
-     <div data-aos="fade-right" data-aos-duration="2000">
+     <div data-aos="fade-right" data-aos-duration="1000">
         <div class="pres_couleur">
           <a href="#">
           <div class="titre_couleur">
@@ -140,7 +140,7 @@
       <div class="vide">
       </div>
 
-      <div data-aos="fade-right" data-aos-duration="2000">
+      <div data-aos="fade-right" data-aos-duration="1000">
         <div class="pres">
           <a href="#">
           <div class="titre">
@@ -177,7 +177,7 @@
       <div class="vide">
       </div>
 
-      <div data-aos="fade-right" data-aos-duration="2000">
+      <div data-aos="fade-right" data-aos-duration="1000">
         <div class="pres_couleur">
           <a href="#">
           <div class="titre_couleur">
@@ -235,9 +235,12 @@
     <div class="pied">
     </div>
     <div class="ecrit_pied">
-        <a>CMFC CONSEILS & FORMATIONS</a>
+        <a>CMFC</a>
         <a class="marche" href="#">
         Mentions Légales
+        </a>
+        <a class="marche" href="#">
+        Nous contacter
         </a>
     </div>
   </footer>
