--- a/conseils_formations.html
+++ b/conseils_formations.html
@@ -32,8 +32,8 @@
         <input id="nav-toggle" type="checkbox">
         <div class="logo">CMCF</div>
         <ul class="links">
-          <li><a href="#projects">Accueil</a></li>
-          <li><a href="#">Conseils & Formations</a>
+          <li><a href="acceuil.html">Accueil</a></li>
+          <li><a href="conseils_formations.html">Conseils & Formations</a>
           <li><a href="#about">Recrutement</a></li>
           <li><a href="#projects">Livre</a></li>
         </ul>
@@ -56,7 +56,7 @@
       <div class="vide">
       </div>
 
-      <div data-aos="fade-right" data-aos-duration="2000">
+      <div data-aos="fade-right" data-aos-duration="1000">
         <div class="pres">
           <div class="titre">
             <h3>GESTION DES SITUATIONS COMPLEXES</h3>
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <div data-aos="fade-left" data-aos-duration="2000">
+      <div data-aos="fade-left" data-aos-duration="1000">
 
       <div class="vide_bouton">
       </div>
@@ -115,7 +115,7 @@
       <div class="vide">
       </div>
 
-      <div data-aos="fade-right" data-aos-duration="2000">
+      <div data-aos="fade-right" data-aos-duration="1000">
         <div class="pres">
           <div class="titre_couleur">
             <h3>SOUTIENS AUX ÉQUIPES</h3>
@@ -128,12 +128,12 @@
             <p>
         </div>
 
-        <div data-aos="fade-left" data-aos-duration="2000">
+        <div data-aos="fade-left" data-aos-duration="1000">
 
         <div class="vide_bouton">
         </div>
 
-        <a href="">
+        <a href="formation_1.html">
         <div class="bouton_couleur">
                <span>Groupe d’analyse de la pratique professionnelle</span>
             </div>
@@ -255,7 +255,7 @@
       <div class="vide">
       </div>
 
-      <div data-aos="fade-right" data-aos-duration="2000">
+      <div data-aos="fade-right" data-aos-duration="1000">
         <div class="pres">
           <div class="titre">
             <h3>GESTION DES SITUATIONS COMPLEXES</h3>
@@ -269,7 +269,7 @@
         </div>
       </div>
 
-      <div data-aos="fade-left" data-aos-duration="2000">
+      <div data-aos="fade-left" data-aos-duration="1000">
 
       <div class="vide_bouton">
       </div>
@@ -353,9 +353,12 @@
     <div class="pied">
     </div>
     <div class="ecrit_pied">
-        <a>CMFC CONSEILS & FORMATIONS</a>
+        <a>CMFC</a>
         <a class="marche" href="#">
         Mentions Légales
+        </a>
+        <a class="marche" href="#">
+        Nous contacter
         </a>
     </div>
   </footer>
