--- a/formation_1.html
+++ b/formation_1.html
@@ -32,8 +32,8 @@
         <input id="nav-toggle" type="checkbox">
         <div class="logo">CMCF</div>
         <ul class="links">
-          <li><a href="#projects">Accueil</a></li>
-          <li><a href="#">Conseils & Formations</a>
+          <li><a href="acceuil.html">Accueil</a></li>
+          <li><a href="conseils_formations.html">Conseils & Formations</a>
           <li><a href="#about">Recrutement</a></li>
           <li><a href="#projects">Livre</a></li>
         </ul>
@@ -63,7 +63,7 @@
       <div class="vide">
       </div>
 
-       <div data-aos="fade-right" data-aos-duration="2000">
+       <div data-aos="fade-right" data-aos-duration="1000">
         <div class="pres">
           <div class="titre">
             <p>Groupe d'analyse de la pratique professionnelle</p>
@@ -92,7 +92,7 @@
       <div class="vide">
       </div>
 
-      <div data-aos="fade-right" data-aos-duration="2000">
+      <div data-aos="fade-right" data-aos-duration="1000">
         <div class="pres">
           <div class="titre_couleur">
             <p>Public – Prérequis – délais d’accès - PSH</p>
@@ -105,7 +105,7 @@
           <div class="vide">
           </div>
 
-          <div data-aos="fade-left" data-aos-duration="2000">
+          <div data-aos="fade-left" data-aos-duration="1000">
 
             <div class="titre_couleur">
             <p>Objectifs pédagogiques</p>
@@ -124,7 +124,7 @@
       <div class="vide">
       </div>
 
-      <div data-aos="fade-right" data-aos-duration="2000">
+      <div data-aos="fade-right" data-aos-duration="1000">
           <div class="pres">
             <div class="titre_couleur">
             <p>Intervenant</p>
@@ -151,7 +151,7 @@
       <div class="vide">
       </div>
 
-      <div data-aos="fade-right" data-aos-duration="2000">
+      <div data-aos="fade-right" data-aos-duration="1000">
           <div class="pres">
             <div class="titre">
             <p>Méthodes – Évaluation – Besoins durant la formation</p>
@@ -170,7 +170,6 @@
           <div class="vide">
           </div>
 
-        <div data-aos="fade-left" data-aos-duration="2000">
           <div class="pres">
             <div class="titre">
             <p>Bilan des interventions</p>
@@ -179,7 +178,6 @@
             <p class="texte">Un bilan par an avec la direction – Retour sur les thématiques abordées et sur les difficultés rencontrées par les équipes. Sur ce dernier point, la confidentialité et l’anonymat des échanges dans les groupes seront respectés.</p>
             <p class="texte">De même, l’intervenant s’engage à également respecter les règles de confidentialité tout au long de son intervention.</p>
           </div>
-        </div>
 
           <div class="vide">
           </div>
@@ -203,9 +201,12 @@
     <div class="pied">
     </div>
     <div class="ecrit_pied">
-        <a>CMFC CONSEILS & FORMATIONS</a>
+        <a>CMFC</a>
         <a class="marche" href="#">
         Mentions Légales
+        </a>
+        <a class="marche" href="#">
+        Nous contacter
         </a>
     </div>
   </footer>
