--- a/E5-Leger-main/formation_1.html
+++ b/E5-Leger-main/formation_1.html
@@ -32,7 +32,7 @@
         <input id="nav-toggle" type="checkbox">
         <div class="logo">CMCF</div>
         <ul class="links">
-          <li><a href="acceuil.html">Accueil</a></li>
+          <li><a href="index.php">Accueil</a></li>
           <li><a href="conseils_formations.html">Conseils & Formations</a>
           <li><a href="#about">Recrutement</a></li>
           <li><a href="#projects">Livre</a></li>
